# AgentSocietyChallenge_w_CrewAI

./: .gitignore  CLAUDE.md  README.md  crewai_simulation_agent.py  evaluate_with_training_data.py  pyproject.toml  run_nvidia_test.py  run_pipeline.py  run_simulator_test.py  run_test.py  simulation_logs.txt
GTsimulation/: ModGTAgent.py  RecGTAgent.py
config/: agents.yaml  tasks.yaml
data/: item_subset.json  review_subset.json  test_review_subset.json  user_subset.json
docs/: architecture_diagram.md  index.html  student_onboarding_plan.md  student_onboarding_plan_en.md  student_test_guide.md
dummy_dataset/: item.json  review.json  user.json
dummy_groundtruth/: groundtruth_1.json  groundtruth_10.json  groundtruth_11.json  groundtruth_12.json  groundtruth_13.json  groundtruth_14.json  groundtruth_15.json  groundtruth_16.json  groundtruth_17.json  groundtruth_18.json  groundtruth_19.json  groundtruth_2.json  groundtruth_20.json  groundtruth_21.json  groundtruth_22.json  groundtruth_23.json  groundtruth_24.json  groundtruth_25.json  groundtruth_26.json  groundtruth_27.json  groundtruth_28.json  groundtruth_29.json  groundtruth_3.json  groundtruth_30.json  groundtruth_31.json  groundtruth_32.json  groundtruth_33.json  groundtruth_34.json  groundtruth_35.json  groundtruth_36.json  groundtruth_37.json  groundtruth_38.json  groundtruth_39.json  groundtruth_4.json  groundtruth_40.json  groundtruth_41.json  groundtruth_5.json  groundtruth_6.json  groundtruth_7.json  groundtruth_8.json  (+1 more)
dummy_tasks/: task_1.json  task_10.json  task_11.json  task_12.json  task_13.json  (+36 more)
(+4637 files in other folders)
