[virtualenvs]
in-project = true

[project]
name = "websocietysimulator"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "crewai[litellm]>=1.14.1",
    "litellm>=1.83.0",
    "lmdb>=2.2.0",
    "nltk>=3.9.4",
    "openevolve",
    "pandas>=2.3.3",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "tqdm>=4.67.3",
]

[tool.poetry]
name = "websocietysimulator"
version = "0.1.0"
description = "Web Social Simulator for WWW'25 AgentSociety Challenge"
authors = ["Yuwei Yan <yyan791@connect.hkust-gz.edu.cn>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
tqdm = "^4.67.1"
nltk = "^3.9.1"
transformers = "^4.47.0"
sentence-transformers = "^3.3.1"
openai = "^1.58.1"
langchain = "^0.3.13"
langchain-openai = "^0.2.14"
langchain-chroma = "^0.1.4"
torch = "^2.5.1"
lmdb = "^1.6.2"
agentsociety = "^1.0.13"

[tool.uv.sources]
openevolve = { path = "../../openevolve" }

[build-system]
requires = ["poetry-core>=1.1.0", "poetry>=1.1.0,<1.9.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "behave>=1.3.3",
]
